edits to htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,1 @@
-Redirect 301 literacy-training/word-builder/ https://calireads.org/wordbuilder-info/
+Redirect 301 https://calireads.org/literacy-training/word-builder/ https://calireads.org/wordbuilder-info/
